syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.msashkin.rpchelloservice.service";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package rpchelloservice;

service RpcHelloService {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string myName = 1;
}

message HelloResponse {
    string message = 1;
}
